# Jetson

./: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  README.md  head_ubicomp.onnx  initial.cpp  note.txt  test.cpp  test_half  test_half.cpp  trt_sample.cpp
